# miniROS

./: .gitignore  .gitmodules  README.md  machine.jsonc  pyproject.toml
assets/exo_g1/: G1.urdf  G1.xml  G1_float.xml
assets/gellos/: joint_map_dynamixel.yaml  joint_map_encoder.yaml  joint_map_feetch.yaml  joint_map_feetech.yaml
assets/piper/: piper.xml
assets/tj_arm/: joint_map.yaml
assets/unitree_g1/: g1_upper_body.xml
examples/: test_async_input.py  test_driver.py  test_reader.py  test_robot.py  test_zmq_sc.py
examples/benchmark/: benchmark_examples.py  benchmark_frequency.py  benchmark_results.json  cleanup_ports.py
examples/network/: queue_client.py  queue_server.py
examples/rdc/: README.md  file_node.py  ports.py  robot_node.py
examples/sim/: exo_g1_gello_env.py  exo_g1_record3d_env.py  marvin_gello_env.py  piper_gello_env.py
frontend/: .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/res/: en.lang.json  jp.lang.json  zh.lang.json
frontend/src/: main.tsx
samples/: machine.g1.jsonc  machine.marvin.sample.jsonc  machine.piper.sample.jsonc
scripts/: launch_commander.py  launch_marvin_commander.py  launch_robot.py  launch_webui.py  stop_robot.py
scripts/sim/: exo_g1_gello_env.py  (+2 more)
test/: pika_test_single_file.py  serial_test.py  test_cam_io_freq.py  test_fixed_traj.py  test_full_robot_io_freq.py  test_marvin_freq.py  test_multi_robot_io_freq.py  test_pika_freq.py  test_pika_read.py  test_pkl_file.py  test_robot_io_freq.py  test_robot_robot_io_freq.py  test_web_command.py  test_web_robot.py
(+117 files in other folders)
